# voting-poc

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  neurons.md
e2e_tests/: config.sh  test_assigned_reputation_neuron.sh  test_external_data_provider.sh  test_layer.sh  test_neural_governance.sh  test_prior_voting_history_neuron.sh  test_template_neuron.sh  test_voting_system.sh
scripts/: README.md  config.sh  deploy_contracts.sh  initialize_account.sh  invoke_function.sh  restart_docker.sh  retry_command.sh  run.sh  test_voting_system.sh
src/: layer.rs  lib.rs  test.rs  types.rs
src/assigned_reputation_neuron/: Cargo.toml
src/assigned_reputation_neuron/src/: assigned_reputation_neuron_test.rs  lib.rs
src/external_data_provider/: Cargo.toml
src/external_data_provider/src/: external_data_provider_test.rs  lib.rs  test.rs  types.rs
src/external_data_provider/src/page_rank/: mod.rs  page_rank_test.rs
src/layer/: Cargo.toml
src/layer/src/: layer_test.rs  lib.rs  test.rs
src/neural_governance/: Cargo.toml
src/neural_governance/src/: lib.rs  neural_governance_test.rs  test.rs
src/neuron/: trust_graph_neuron.rs
src/neuron_old/: mod.rs  trust_graph_neuron.rs
src/prior_voting_history_neuron/: Cargo.toml
src/prior_voting_history_neuron/src/: lib.rs  prior_voting_history_neuron_test.rs  test.rs
src/shared/: Cargo.toml
src/shared/src/: decimal_number_persist.rs  lib.rs  types.rs
src/shared/src/decimal_number_persist/: decimal_number_persist_test.rs  mod.rs  test.rs
src/shared/src/decimal_number_wrapper/: decimal_number_wrapper_test.rs  mod.rs
src/simple_neuron/: Cargo.toml
src/simple_neuron/src/: lib.rs  simple_neuron_test.rs
src/template_neuron/: Cargo.toml
src/template_neuron/src/: lib.rs  template_neuron_test.rs
src/utils/: decimal_number_persist.rs  mod.rs
src/voting_system/: Cargo.toml
src/voting_system/src/: layer.rs  lib.rs  neural_governance.rs  types.rs  voting_system_test.rs
src/voting_system/src/decimal_number_wrapper/: decimal_number_wrapper_test.rs  mod.rs
src/voting_system/src/neurons/: assigned_reputation_neuron.rs  dummy_neuron.rs  mod.rs  new_neuron.rs  prior_voting_history_neuron.rs  trust_graph_neuron.rs
src/voting_system/src/page_rank/: mod.rs  page_rank_test.rs
