[workspace]
resolver = "2"
members = [
    "./src/shared",
    "./src/external_data_provider",
    "./src/template_neuron",
    "./src/assigned_reputation_neuron",
    "./src/prior_voting_history_neuron",
    "./src/layer",
    "./src/neural_governance",
    "./src/voting_system",
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/karol-bisztyga/rs-soroban-sdk.git", branch = "kb/fork" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
