[package]
name = "voting-neural-governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { git = "https://github.com/karol-bisztyga/rs-soroban-sdk.git", branch = "kb/fork" }
voting-layer = { path = "../layer" }
voting-shared = { path = "../shared" }

[dev_dependencies]
soroban-sdk = { git = "https://github.com/karol-bisztyga/rs-soroban-sdk.git", branch = "kb/fork", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
